listo los cupos

--- a/src/Frames/index.form
+++ b/src/Frames/index.form
@@ -1553,7 +1553,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="montoTxt" min="-2" pref="96" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnGenerarJugada" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="48" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -1570,7 +1570,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="animalTxt" max="32767" attributes="0"/>
                               <Component id="montoTxt" max="32767" attributes="0"/>
-                              <Component id="jButton3" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="btnGenerarJugada" min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -1604,12 +1604,12 @@
                     <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="montoTxtKeyTyped"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="jButton3">
+                <Component class="javax.swing.JButton" name="btnGenerarJugada">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="-&gt;"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGenerarJugadaActionPerformed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton5">
